scss:code: Fixed background colour overlap with tables

--- a/assets/scss/design/basicDesign.scss
+++ b/assets/scss/design/basicDesign.scss
@@ -90,13 +90,14 @@ table {
 code {
 	font-family: "Fira Code", monospace;
 	font-size: 80%;
-	background-color: var(--background-colour-alt);
+	background-color: var(--background-colour-alt-2);
 }
 
 pre code {
 	display: block;
 	overflow-x: auto;
 	padding: 1em;
+	background-color: var(--background-colour-alt);
 }
 
 :not(pre) > code {
