--- a/assets/scss/theme/colours.scss
+++ b/assets/scss/theme/colours.scss
@@ -4,6 +4,7 @@
 	--body-background-colour: #{$gray-0};
 	--background-colour: var(--body-background-colour);
 	--background-colour-alt: #{$gray-2};
+	--background-colour-alt-2: #{$gray-4};
 	--text-colour: #{$gray-9};
 	--text-colour-alt: #{$gray-7};
 	// Links
@@ -21,6 +22,7 @@
 	--body-background-colour: #{$gray-9};
 	--background-colour: var(--body-background-colour);
 	--background-colour-alt: #{$gray-8};
+	--background-colour-alt-2: #{$gray-7};
 	--text-colour: #{$gray-0};
 	--text-colour-alt: #{$gray-5};
 	// Links
